# crawlkit

./: .dockerignore  .env.example  .gitignore  ADAPTIVE_EXTRACTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_PARSER_SUMMARY.md  LICENSE  PDF_PARSER_GUIDE.md  Procfile  QUICKSTART_VIDEO_INTELLIGENCE.md  README.md  SECURITY.md  VIDEO_INTELLIGENCE.md  pyproject.toml  railway.json  railway.toml  requirements.txt  test_adaptive_extraction.py  test_adaptive_simple.py  test_all_endpoints.py  test_comprehensive.py  test_formats.py  test_learning_engine.py  test_new_features.py  test_video_intelligence.py  verify_deployment.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crawlkit/: __init__.py  __main__.py  cli.py  db.py
crawlkit/api/: pages.py  server.py
crawlkit/core/: chunker.py  crawler.py  fetcher.py  formatter.py  parser.py  result.py  screenshot.py  stealth.py  watch.py
crawlkit/intelligence/: __init__.py  content_extractor.py  learning_engine.py  noise_filter.py  video.py  (+2 more)
database/: MIGRATION.md  learning_schema.sql  migrate.py  migrate_rest.py  migrate_ui.sql  schema.sql
marketing/: post-launch-vi.md
scripts/: migrate.py  set_railway_env.py  set_railway_env.sh
sdks/: SDK_SUMMARY.md
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/crawlkit/: __init__.py  cli.py  client.py  exceptions.py  types.py
web/: DEPLOYMENT.md  README.md  admin.html  dashboard.html  index.html  login.html  package.json  signup.html  vercel.json
(+35 files in other folders)
