[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlkit"
version = "0.1.0"
description = "Official Python SDK for CrawlKit — Web + Video Intelligence API for AI"
readme = "README.md"
authors = [{name = "CrawlKit", email = "hello@crawlkit.ai"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.scripts]
crawlkit = "crawlkit.cli:main"

[project.urls]
Homepage = "https://crawlkit.vercel.app"
Documentation = "https://crawlkit.vercel.app/docs"
Repository = "https://github.com/crawlkit/crawlkit-python"
Issues = "https://github.com/crawlkit/crawlkit-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["crawlkit*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
